--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -33,6 +33,14 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="@string/cheat_button" />
+
+
+    <Button
             android:layout_width="wrap_content"
             android:id="@+id/next_button"
             android:layout_height="wrap_content"
@@ -40,5 +48,11 @@
             android:text="@string/next_button"
             android:drawableEnd="@drawable/arrow_right"
             android:drawablePadding="4dp"/>
+
+    <Button
+        android:id="@+id/qbutton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/questions_and_answer_page" />
 
 </FrameLayout>
