--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,8 @@
             android:layout_height="wrap_content"
             android:text="@string/false_button"/>
 
+
+
     </LinearLayout>
 
     <Button
@@ -39,5 +41,10 @@
         android:text="@string/next_button"
         android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="4dp"/>
+    <Button
+    android:id="@+id/showAns"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/show_answers"/>
 
 </LinearLayout>
