--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,9 @@
             android:text="@string/false_button"/>
 
     </LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <Button
         android:layout_width="wrap_content"
@@ -39,5 +42,17 @@
         android:text="@string/next_button"
         android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="4dp"/>
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="@string/cheat_button" />
 
+    <Button
+        android:id="@+id/showAnswers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/show_answers"/>
+</LinearLayout>
 </LinearLayout>
