--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,6 +8,7 @@
             android:id="@+id/question_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:gravity="center"
             android:layout_gravity="center_horizontal"
             android:padding="24dp"
@@ -33,12 +34,22 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="@string/cheat_button"
+        android:layout_margin="60dp"/>
+
+    <Button
+
             android:layout_width="wrap_content"
             android:id="@+id/next_button"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|center"
             android:text="@string/next_button"
             android:drawableEnd="@drawable/arrow_right"
             android:drawablePadding="4dp"/>
+
 
 </FrameLayout>
