--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+
         <Button
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
@@ -33,11 +34,28 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/cheat_button" />
+
+    <Button
+        android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:id="@+id/next_button"
         android:layout_height="wrap_content"
         android:text="@string/next_button"
         android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="4dp"/>
+
+    <Button
+        android:id="@+id/showall"
+        android:layout_marginTop="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show all answers"
+        android:textColor="@color/colorAccent"
+        />
 
 </LinearLayout>
