--- a/app/src/main/res/layout/activity_all_question.xml
+++ b/app/src/main/res/layout/activity_all_question.xml
@@ -14,7 +14,7 @@
         android:layout_margin="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/all_question"
         tools:layout_editor_absoluteX="22dp"
         tools:layout_editor_absoluteY="96dp" />
 
